fix spacing

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -26,27 +26,6 @@ h3, h4, h5 {
   padding-bottom: 0px !important;
 }
 
-.promo-section {
-  h1 {
-   padding: 40px 30px 0 30px;
-   color: #3f3f3f;
-  }
-  p {
-   color: #3f3f3f;
-  }
-}
-
-// Feature article
-// -------
-.feature-article {
-  h4, h5 {
-    padding-top: 20px;
-  }
-}
-
-// BUTTONS
-// -------
-
 
 // FOOTER
 // -------
